# BTC_Trading_System

./: .env.example  .gitignore  README.md  pyproject.toml
config/: assets.yaml  model.yaml  risk.yaml
src/trading_bot/: __init__.py  cli.py  logging_config.py  main.py  settings.py
src/trading_bot/backtest/: __init__.py  execution.py  metrics.py  reporting.py  signals.py  simulator.py  strategy.py
src/trading_bot/execution/: __init__.py  broker_adapter.py  order_manager.py  signal_engine.py
src/trading_bot/experiments/: __init__.py  comparison.py  promotion.py  registry.py  tracker.py
src/trading_bot/features/: __init__.py  feature_pipeline.py  feature_store.py  market_features.py  news_features.py
src/trading_bot/ingestion/: __init__.py  binance_client.py  market_data.py  news_client.py  (+1 more)
tests/: test_backtest_metrics.py  test_backtest_simulator.py  test_cli.py  test_dataset_builder.py  test_evaluation_report.py  test_experiment_tracker.py  test_feature_pipeline.py  test_fee_aware_targets.py  test_finbert_service.py  test_labels.py  test_market_data_ingestion.py  test_market_features.py  test_metrics.py  test_multi_horizon.py  test_news_enrichment.py  test_news_features.py  test_news_ingestion.py  test_news_store.py  test_optimization_report.py  test_paper_loop.py  test_parquet_store.py  test_project_imports.py  test_run_comparison.py  test_sentiment_features.py  test_settings.py  test_signal_generation.py  test_strategy_search.py  test_strategy_selection.py  test_training_pipeline.py  test_validation_baselines.py  test_validation_suite.py  test_walk_forward.py
(+61 files in other folders)
