[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "btc-ml-trading-bot"
version = "0.1.0"
description = "BTC-only ML trading research and paper-trading system"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Trading Bot Team" },
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "pyyaml>=6.0,<7.0",
    "click>=8.0,<9.0",
    "structlog>=24.0",
    "python-dotenv>=1.0,<2.0",
    "rich>=13.0,<14.0",
    "pandas>=2.2",
    "pyarrow>=15.0",
    "httpx>=0.27",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]
ml = [
    "lightgbm>=4.0",
    "scikit-learn>=1.4",
]
nlp = [
    "transformers>=4.40",
    "sentence-transformers>=2.7",
    "torch>=2.2",
]
tracking = [
    "mlflow>=2.12",
]

[project.scripts]
trading-bot = "trading_bot.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_bot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
